Completed product page, responsive and colors

--- a/ProyectoDOR/main.html
+++ b/ProyectoDOR/main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/light mode/layout.css" />
     <link rel="stylesheet" href="styles/light mode/layout-responsive.css" />
 
+    <!-- MODO OSCURO, DESCOMENTAR -->
     <!-- <link rel="stylesheet" href="styles//dark mode/layout-dark.css" />
     <link rel="stylesheet" href="styles/dark mode/layout-responsive-dark.css"> -->
 
@@ -16,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/4071e215e7.js" crossorigin="anonymous"></script>
     <script src="./scripts/mainPage.js"></script>
   </head>
 
