--- a/ProyectoDOR/subpages/user-profile-edit.html
+++ b/ProyectoDOR/subpages/user-profile-edit.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="../styles/light mode/layout.css" />
     <link rel="stylesheet" href="../styles/light mode/layout-responsive.css" />
   
+    <!-- MODO OSCURO, DESCOMENTAR -->
     <!-- <link rel="stylesheet" href="../styles/dark mode/layout-dark.css" />
-    <link rel="stylesheet" href="../styles/dark mode/layout-responsive-dark.css">> -->
+    <link rel="stylesheet" href="../styles/dark mode/layout-responsive-dark.css"> -->
 
     <link rel="stylesheet" href="../styles/user-profile-styles.css" />
 
@@ -18,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/4071e215e7.js" crossorigin="anonymous"></script>
 
     <script src="../scripts/mainPage.js" defer></script>
 
