Most progress in checkout and cart

--- a/ProyectoDOR/subpages/product.html
+++ b/ProyectoDOR/subpages/product.html
@@ -70,9 +70,12 @@
         ></a>
       </header>
       
-      <button class="cart-btn">
-        <img src="../media/cart.png" alt="cart image" />
-      </button>
+      <a href="./cart.html" style="text-decoration: none;">
+        <button class="cart-btn">
+          <img src="../media/cart.png" alt="cart image" />
+        </button>
+      </a>
+      
 
       <main>
         <section class="product-zone">
