W3 validation on most sites

--- a/ProyectoDOR/main.html
+++ b/ProyectoDOR/main.html
@@ -64,7 +64,7 @@
         </ul>
       </nav>
       <a href="./main.html">
-        <h1 id="page-title">MindWell</h1>
+        <p id="page-title">MindWell</p>
       </a>
       <a class="header-avatar-link" href="./subpages/user-profile.html"><span class="user-template"></span></a>
     </header>
@@ -187,7 +187,7 @@
 
       </section>
       <div class="button-container">
-        <button class="unlock-all-button">Unlock all</button>
+        <button class="default-button">Unlock all</button>
       </div>
 
       <h2>Experiences</h2>
