--- a/ProyectoDOR/subpages/checkout/payment.html
+++ b/ProyectoDOR/subpages/checkout/payment.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Product</title>
 
-    <link rel="stylesheet" href="../../styles/light mode/layout.css" />
-    <link rel="stylesheet" href="../../styles/light mode/layout-responsive.css" />
-    <link rel="stylesheet" href="../../styles/light mode/checkout.css" />
+    <link rel="stylesheet" href="../../styles/light_mode/layout.css" >
+    <link rel="stylesheet" href="../../styles/light_mode/layout-responsive.css" >
+    <link rel="stylesheet" href="../../styles/light_mode/checkout.css" >
 
-    <!-- <link rel="stylesheet" href="../../styles/dark mode/layout-dark.css" />
-    <link rel="stylesheet" href="../../styles/dark mode/layout-responsive-dark.css">
-    <link rel="stylesheet" href="../../styles/dark mode/checkout-dark.css" /> -->
+    <!-- <link rel="stylesheet" href="../../styles/dark_mode/layout-dark.css" >
+    <link rel="stylesheet" href="../../styles/dark_mode/layout-responsive-dark.css">
+    <link rel="stylesheet" href="../../styles/dark_mode/checkout-dark.css" > -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap"
       rel="stylesheet"
-    />
+    >
     <script src="https://kit.fontawesome.com/4071e215e7.js" crossorigin="anonymous"></script>
 
   </head>
@@ -34,7 +34,7 @@
 
         </nav>
         <a href="../../main.html">
-          <h1 id="page-title">MindWell</h1>
+          <p id="page-title">MindWell</p>
         </a>
         <a class="header-avatar-link" href="./subpages/user-profile.html"
           ><span class="user-template"></span
@@ -136,14 +136,9 @@
           </ul>
           <div class="email-contact">
             <p>Stay updated on everything MindWell</p>
-            <form action="">
-              <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="Your email here"
-              />
-              <input type="submit" value="Subscribe" id="submit" />
+            <form action="post">
+              <input type="email" name="email" id="email" placeholder="Your email here" >
+              <input type="submit" value="Subscribe" id="submit" >
             </form>
           </div>
           <ul class="footer-info-links">
