--- a/ProyectoDOR/subpages/checkout/information.html
+++ b/ProyectoDOR/subpages/checkout/information.html
@@ -2,21 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <title>Product</title>
 
-  <link rel="stylesheet" href="../../styles/light mode/layout.css" />
-  <link rel="stylesheet" href="../../styles/light mode/layout-responsive.css" />
-  <link rel="stylesheet" href="../../styles/light mode/checkout.css" />
+  <link rel="stylesheet" href="../../styles/light_mode/layout.css" >
+  <link rel="stylesheet" href="../../styles/light_mode/layout-responsive.css" >
+  <link rel="stylesheet" href="../../styles/light_mode/checkout.css" >
 
-  <!-- <link rel="stylesheet" href="../../styles/dark mode/layout-dark.css" />
-  <link rel="stylesheet" href="../../styles/dark mode/layout-responsive-dark.css">
-  <link rel="stylesheet" href="../../styles/dark mode/checkout-dark.css" />  -->
+  <!-- <link rel="stylesheet" href="../../styles/dark_mode/layout-dark.css">
+  <link rel="stylesheet" href="../../styles/dark_mode/layout-responsive-dark.css">
+  <link rel="stylesheet" href="../../styles/dark_mode/checkout-dark.css" >  -->
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" >
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap" rel="stylesheet" >
   <script src="https://kit.fontawesome.com/4071e215e7.js" crossorigin="anonymous"></script>
 
 </head>
@@ -35,7 +35,7 @@
         </ul>
       </nav>
       <a href="../../main.html">
-        <h1 id="page-title">MindWell</h1>
+        <p id="page-title">MindWell</p>
       </a>
       <a class="header-avatar-link" href="./subpages/user-profile.html"><span class="user-template"></span></a>
     </header>
@@ -62,13 +62,13 @@
             <p>Product 2</p>
           </div>
 
-          <form action="">
+          <form action="post">
           </form>
         </div>
 
         <div class="cart-summary box-template summary-container">
           <h2>Cart Summary</h2>
-          <table cellspacing="0" cellpadding="0">
+          <table>
             <tr>
               <td>Service 1:</td>
               <td>$50.00</td>
@@ -85,7 +85,7 @@
 
           <p>Importe total: $170.00</p>
         </div>
-        <a href="./payment.html"><button class="next-step ">Continue to payment</button></a>
+        <a href="./payment.html" class="next-step">Continue to payment</a>
 
 
       </div>
@@ -118,9 +118,9 @@
         </ul>
         <div class="email-contact">
           <p>Stay updated on everything MindWell</p>
-          <form action="">
-            <input type="email" name="email" id="email" placeholder="Your email here" />
-            <input type="submit" value="Subscribe" id="submit" />
+          <form action="post">
+            <input type="email" name="email" id="email" placeholder="Your email here" >
+            <input type="submit" value="Subscribe" id="submit" >
           </form>
         </div>
         <ul class="footer-info-links">
