--- a/ProyectoDOR/subpages/cart.html
+++ b/ProyectoDOR/subpages/cart.html
@@ -34,7 +34,7 @@
         <nav>
           <ul>
             <li><a href="../main.html">Home</a></li>
-            <li><a href="../main.html">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="../main.html">Contact</a></li>
           </ul>
         </nav>
