--- a/ProyectoDOR/subpages/product.html
+++ b/ProyectoDOR/subpages/product.html
@@ -58,7 +58,7 @@
         <nav>
           <ul>
             <li><a href="../main.html">Home</a></li>
-            <li><a href="../main.html">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="../main.html">Contact</a></li>
           </ul>
         </nav>
