--- a/ProyectoDOR/subpages/about.html
+++ b/ProyectoDOR/subpages/about.html
@@ -46,13 +46,15 @@
 
     <section id="actividad">
       <h2>Actividad Comercial</h2>
-      <img src="foto1.jpg" alt="Fotografía 1">
-      <img src="foto2.jpg" alt="Fotografía 2">
-      <img src="foto3.jpg" alt="Fotografía 3">
-      <img src="grafico1.png" alt="Gráfico 1">
-      <img src="grafico2.png" alt="Gráfico 2" role="img" aria-label="Descripción del gráfico 2">
-      <img src="decorativa.jpg" alt="" aria-hidden="true">
-    </section>
+      <div class="image-set">
+        <img src="../media/about_images/background.png" aria-hidden="true" id="about-background">
+        <img class="card-image" src="../media/about_images/team.jpg" alt="Fotografía 1">
+        <img class="card-image" src="../media/about_images/smiling-people-holding-hands-together.jpg" alt="Fotografía 2">
+        <img class="card-image" src="../media/about_images/teamwork-meeting-with-business-people.jpg" alt="Fotografía 3">
+        <img class="card-image" src="../media/about_images/pie.jpeg" alt="Pie chart de ejemplo" role="img" aria-label="Descripción del gráfico">
+        <img class="card-image" src="../media/about_images/bars.jpeg" alt="Bar chart de ejemplo" role="img" aria-label="Descripción del gráfico">  
+      </div>
+        </section>
 
     <section id="equipo">
       <h2>Equipo Profesional</h2>
@@ -61,14 +63,10 @@
 
     <section id="historia">
       <h2>Historia</h2>
-      <p>Texto sobre la historia...</p>
-    </section>
-
-    <section id="video">
-      <h2>Vídeo</h2>
       <iframe width="560" height="315" src="../media/videos/cutepandas.mp4"
         title="Vídeo de la empresa, o muchos pandas" frameborder="0" allowfullscreen autostart="false"></iframe>
         <!-- crear transcripcion en una pagina aparte, sin estilos, times new roman, del video -->
+      <p>Un vistazo a la historia de como se formó MindWell.</p>
     </section>
 
     <section id="tabla">
